--- a/src/Components/Home/Testimonials/Testimonials.css
+++ b/src/Components/Home/Testimonials/Testimonials.css
@@ -1,6 +1,17 @@
 .mainDiv {
   margin-left: 40px;
   margin-right: 40px;
-  padding-left: 30px;
-  padding-right: 30px;
+  padding-left: 20px;
+  padding-right: 20px;
+  padding-top: 20px;
+  padding-bottom: 20px;
+}
+
+@media screen and (max-width: 1023px) {
+  .mainDiv {
+    margin-left: 20px;
+    margin-right: 20px;
+    padding-left: 10px;
+    padding-right: 10px;
+  }
 }
