--- a/src/Components/Home/Testimonials/Testimonials.css
+++ b/src/Components/Home/Testimonials/Testimonials.css
@@ -7,6 +7,15 @@
   padding-bottom: 20px;
 }
 
+/* If you want to have text ellipse after 3 line, use this code */
+.textFlow {
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  display: -webkit-box;
+  overflow: hidden;
+  height: 90px;
+}
+
 @media screen and (max-width: 1023px) {
   .mainDiv {
     margin-left: 20px;
